# rust-chess

./: .gitignore  Cargo.toml  build.sh  pyproject.toml  rust_chess.pyi
src/: lib.rs  test.py
src/types/: color.rs  mod.rs  piece.rs
