[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rust-chess"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
rustc-args = [
    "-C",
    "target-cpu=native",           # Gain access to CPU popcnt and ctzl (recommended by chess crate)
    "--cfg",
    "pyo3_disable_reference_pool", # Disables the global reference pool: reduces overhead crossing Py-Rust boundary when creating objects in Python
]
